--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="betSeteK">
-        <iframe src="https://go.aff.7k-partners.com/b6z7zkvf?utm_campaign=geradortiger-gratis"></iframe>
+        <iframe src="https://go.aff.7k-partners.com/nujse6hq?utm_campaign=geradortiger-home"></iframe>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
